float_eq/tests/derive_tests/ulps_epsilon/ulps_epsilon_missing_type_name.rs
use float_eq::FloatEqUlpsEpsilon;

#[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsEpsilon)]
struct MyComplex32 {
    re: f32,
    im: f32,
}

fn main() {}
